--- a/app/src/main/res/layout/activity_edit_menu_item.xml
+++ b/app/src/main/res/layout/activity_edit_menu_item.xml
@@ -314,6 +314,45 @@
                 android:layout_below="@+id/spinSelectFoodType"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:background="@color/colorDivider" />
+
+            <com.yberry.dinehawaii.customview.CustomTextView
+                android:id="@+id/tvFoodTime"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvSelectService"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:drawableLeft="@drawable/drawable_green_dot"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center"
+                android:text="Food Preparation Time"
+                android:textColor="@color/colorGreen"
+                app:edittextfont="Raleway-Bold.ttf" />
+
+            <com.yberry.dinehawaii.customview.CustomEditText
+                android:id="@+id/etFoodTime"
+                style="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:background="@null"
+                android:gravity="start"
+                android:hint="30 mins"
+                android:maxLength="100"
+                android:maxLines="3"
+                android:padding="@dimen/_5sdp"
+                android:textAlignment="textStart"
+                android:textColor="@color/edit_text_color"
+                app:edittextfont="Raleway-Regular.ttf" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:layout_below="@+id/spinSelectFoodType"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:background="@color/colorDivider"></View>
 
             <RelativeLayout
