--- a/app/src/main/res/layout/single_table_fragment.xml
+++ b/app/src/main/res/layout/single_table_fragment.xml
@@ -7,8 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_viewtable"
         android:layout_width="match_parent"
-        android:layout_marginBottom="@dimen/_40sdp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <com.yberry.dinehawaii.customview.CustomTextView
         android:id="@+id/notable"
@@ -26,25 +25,22 @@
         android:visibility="gone"
         app:edittextfont="Raleway-Regular.ttf" />
 
-    <RelativeLayout
+
+    <com.yberry.dinehawaii.customview.CustomTextView
+        android:id="@+id/addNewTable"
+        style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary">
-
-        <com.yberry.dinehawaii.customview.CustomTextView
-            android:id="@+id/addNewTable"
-            style="@style/TextAppearance.AppCompat.Subhead"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:drawablePadding="@dimen/_8sdp"
-            android:padding="@dimen/_8sdp"
-            android:text="Add New Table"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            app:edittextfont="@string/raleway_bold" />
-    </RelativeLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@color/colorPrimary"
+        android:drawablePadding="@dimen/_8sdp"
+        android:padding="@dimen/_8sdp"
+        android:text="Add New Table"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        app:edittextfont="@string/raleway_bold" />
 
 </RelativeLayout>
