--- a/app/src/main/res/layout/blocked_table_fragment.xml
+++ b/app/src/main/res/layout/blocked_table_fragment.xml
@@ -4,27 +4,28 @@
     android:layout_height="match_parent"
     android:background="@color/activityBackground">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_viewtable"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_40sdp" />
 
-    <com.yberry.dinehawaii.customview.CustomTextView
-        android:id="@+id/notable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_20sdp"
-        android:background="@drawable/text_background"
-        android:paddingLeft="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingRight="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:text="No Tables Available"
-        android:visibility="gone"
-        app:edittextfont="Raleway-Regular.ttf" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_marginBottom="@dimen/_40sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar_bar"
+            android:background="@color/white"
+            android:elevation="1dp"
+            android:minHeight="?attr/actionBarSize"
+            android:scrollbars="vertical"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextAppearance="@style/TAB_Selected_Style"
+            app:tabTextColor="#e0808080"></android.support.design.widget.TabLayout>
+    </android.support.v4.view.ViewPager>
 
     <RelativeLayout
         android:layout_width="match_parent"
